prototype-site/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/00-grid-base-styles.scss
//================================================*\
/*	GRID STYLING FILE						*/
//----------------------------------------------------
//	This file holds the code that generates the
//	classes for the grid system.
//
//	DO NOT EDIT THIS FILE UNLESS YOU REALLY KNOW
//	WHAT YOU'RE DOING!
//================================================*/


//switches IE (and other non-flexbox friendly browsers) to using float mode
@mixin M-ieFloat {
	.no-flexbox.no-flexwrap & {
		display: block;
		@include MG-clearfix;
		& > .grid__cell {
			float: left;
			display: block;
		}
	}
}


//================================================*\
/*				GRID WIDTHS						*/
//----------------------------------------------------
//	Quickly and easily apply standard percentage
//	widths to grid cells based on fractions.
//
//	step 1: give container the width modifier class.
//			eg: grid--thirds
//	step 2: give extra wide grid span classes
//			eg. grid__cell--span2
//	WARNING: using a span class will likely require additional
//			 styling for tablets and smaller devices
//
//	EXAMPLE HTML:
//	<ul class="grid grid--cols-3">
//		<li class="grid__cell">Column is 1/3 wide on desktop</li>
//		<li class="grid__cell grid__cell--span-2">column is 2/3 wide on desktop</li>
//	</ul>
//================================================*/

$grid-bp-list: if(
	$gridBreakPoints == false,
	false false false false false false,
	$gridBreakPoints
);

@for $i from 1 through length($grid-bp-list) {
	$columnWidth: percentage(1/$i);
	$breaks: nth($grid-bp-list, $i);

//sets the default grid__cell widths
	.grid--cols-#{$i} {
		> .grid__cell {
			width: $columnWidth;

//.grid__cell--span-# styling
			@if ($i > 1){
				@for $x from 2 through $i {
					&--span-#{$x} { width: $columnWidth * $x; }
				}
			}
		}

//Applies the media queries for the break points
		&:not(.grid--disableMQs) {
			@if ($breaks != false) {
				@for $y from 1 through length($breaks) {
					$MQ-breakData : nth($breaks, $y);
					$MQ-screenWidth : nth($MQ-breakData, 1);
					$MQ-columnWidth : nth($MQ-breakData, 2);
					@include MG-mq(max,$MQ-screenWidth){
						> .grid__cell { width: $MQ-columnWidth; }
					}
				}
			}
		}
		.no-flexbox &.grid--wrap > .grid__cell {
			@if ($i > 2) {
				&:nth-child(#{$i}n+1) { clear: left; }
			}
		}
	}
}



//base grid styling
.grid {
	flex-wrap: wrap;
	@extend %noDots;
	min-width: 100%;
	border: 0 solid #000;
	display: flex;
	align-content: stretch;

//grid-wrap styling... really only necessary for use with grid--gutter-#
	&__wrapper {
		overflow: hidden;
	}

//base grid__cell styling
	&__cell {
		min-width: 0%;
		max-width: 100%;
		display: block;
		padding: 0;
		margin: 0;
		background-clip: padding-box!important;
		border: 0 solid transparent;
		flex-grow: 1;
		outline-color: #000;
		border-color: #000;

		&--vAlign {
			align-self: center;
		}
		&.grid { display: flex; }
		&, * > {
			//helps fix IE10 word-wrap bug (elements need to not be display:inline for the fix to work though)
			max-width: 100%;
			flex-shrink: 1;
		}

		&--noGrowth {
			flex-grow: 0;
		}
		&--noShrink {
			flex-shrink: 0;
		}
	}

//base grid__inner styling
	&__inner { display: block; }

//grid--gutter-# styling
	&[class*="grid--gutter-"] {
		&.grid--outerGutters {
			margin: 0;
			&-v {
				margin-top: 0;
				margin-bottom: 0;
			}
			&-h {
				margin-left: 0;
				margin-right: 0;
			}
			&-top {
				margin-top: 0;
			}
			&-bottom {
				margin-bottom: 0;
			}
			&-left {
				margin-left: 0;
			}
			&-right {
				margin-right: 0;
			}
		}

		> .grid__cell, & {
			border-color: transparent;
			@if ($ie8) {
				border-color: $gutter-ieFallback;
			}
		}
	}

	@mixin M-grid-cellGutter ($gutter){
		margin: -$gutter;
		border-width: $gutter 0 0 $gutter;
		> .grid__cell {
			border-width: 0 $gutter $gutter 0;
		}

		//only apply the outer horizontal gutters if the screen size is smaller than the page width + gutter size
		&.grid--outerGutters {
			@include MG-mq(max, (bp('page') + $gutter)){
				&-h-delayed {
					margin-left: 0;
					margin-right: 0;
				}
				&-left-delayed {
					margin-left: 0;
				}
				&-right-delayed {
					margin-right: 0;
				}
			}
		}
	}

	@each $class, $gutter in $cellGutters {
		&--gutter-#{$class} {
			@if (type-of($gutter) == 'list') {
				@each $value in $gutter {
					@if (length($value) > 1){
						$gutterSize: nth($value,1);
						$mediaQuery: nth($value,2);
						@include MG-mq($mediaQuery){
							@include M-grid-cellGutter($gutterSize);
						}
					} @else {
						@include M-grid-cellGutter($value);
					}
				}
			} @else {
				@include M-grid-cellGutter($gutter);
			}
		}
	}

	&--hasInners {
		> .grid__cell {
			display: flex;
			align-items: stretch;

			> .grid__inner {
				display: block;
				width: 100%;

				&.grid {
					display: flex;
				}
			}
		}
	}

//vertical alignment code
	&--vAlign {
		&:not(.grid--hasInners){
			> .grid__cell {
				display: flex;
				align-items: center;
			}
		}
		&.grid--hasInners {
			align-items: stretch;

			> .grid__cell > .grid__inner {
				display: flex;
				align-items: center;
			}
		}
		&-centered {
			&.grid--hasInners > .grid__cell > .grid__inner,
			&:not(.grid--hasInners) > .grid__cell {
				justify-content: center;
			}
		}
	}


	&--vertical {
		flex-direction: column;
	}

	&--noGrowth {
		> .grid__cell { flex-grow: 0; }
	}

	&--shrinkable {
		min-width: 0;
	}

//Unfortunately this is a necessity for IE compatibility
	&--wrap {
		flex-wrap: wrap;
		@include M-ieFloat;
	}
	&--noWrap {
		flex-wrap: nowrap;
	}
	&--space {
		&-between, &-around {
			> .grid__cell { flex-grow: 0; }
		}
		&-between {
			justify-content: space-between;
		}
		&-around {
			justify-content: space-around;
		}
	}

	&--align {
		&-left, &-center, &-right {
			> .grid__cell { flex-grow: 0; }
		}
		&-left {
			justify-content: flex-start;
		}
		&-left {
			justify-content: center;
		}
		&-right {
			justify-content: flex-end;
		}
	}

//tabular backup for IE9 and below
	.no-flexbox & {
		display: table;
		width: 100%;
		> .grid__cell { display: table-cell; vertical-align: top; }

		&--vAlign > .grid__cell { vertical-align: middle; }
		&--vertical {
			display: block;
			@include M-clearfix;
			& > .grid__cell {
				float: left;
				display: block;
				width: 100%;
			}
		}
	}

//allows IE to use floats instead of display table without affecting modern browsers
	&--ieFloat {
		@include M-ieFloat;
	}

}

